added css flexbox wrap to card container

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
     <header>
@@ -17,11 +18,7 @@
     <main>
 
         <section class = "card">
-            <header>
-                <h2>
-                    Flexbox Row
-                </h2>
-            </header>
+            <header>Flexbox Row</header>
             <div>
                 <p>Use these three properties to create a flexbox row.</p>
                 <code>
@@ -109,16 +106,11 @@
                 </code>
             </div>
         </section>
-
-        <footer>
-            <p>
-                Made with ❤️ and CSS! Yay. 
-            </p>
-        </footer>
-
-
-    
-
     </main>
+    <footer>
+        <p>
+            Made with ❤️ and CSS! Yay. 
+        </p>
+    </footer>
 </body>
 </html>
