box styling, color variables adjustments in CSS

--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
             <div>
                 <p>Use these three properties to create a flexbox row.</p>
                 <code>
-
+                    .row {
+                        display: flex;
+                        flex-direction: row;
+                        flex-wrap: wrap;
+                    }
                 </code>
             </div>
         </section>
@@ -38,7 +42,10 @@
                     Use this to create a flexbox column layout.
                 </p>
                 <code>
-
+                    .column {
+                        display: flex;
+                        flex-direction: column;
+                    }
                 </code>
             </div>
         </section>
