fixed css grid styling and media query to proper format

--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
         Here are some helpful tips and tricks to get you started with CSS.
     </p>  
     </header>  
-
+    <grid>
     <main>
-
         <section class = "card">
             <header>
                 <h2>Flexbox Row</h2>
@@ -141,6 +140,7 @@
                 </code>
             </div>
         </section>
+    </grid>
     </main>
     <footer>
         <p>
