added box transition glow css

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <grid>
     <main>
         <section class = "card">
-            <header>
+            <header class="header-title">
                 <h2>Flexbox Row</h2>
             </header>
             <div>
@@ -33,7 +33,7 @@
         </section>
 
         <section class = "card">
-            <header>
+            <header class="header-title">
                 <h2>
                     Flexbox Column
                 </h2>
@@ -52,7 +52,7 @@
         </section>
 
         <section class = "card">
-            <header>
+            <header class="header-title">
                 <h2>
                     CSS Grid Layout
                 </h2>
@@ -73,7 +73,7 @@
         </section>
 
         <section class = "card">
-            <header>
+            <header class="header-title">
                 <h2>
                     Linear Gradient
                 </h2>
@@ -96,7 +96,7 @@
         </section>
 
         <section class = "card">
-            <header>
+            <header class="header-title">
                 <h2>
                     Box Transition Glow
                 </h2>
@@ -122,7 +122,7 @@
         </section>
 
         <section class = "card">
-            <header>
+            <header class="header-title">
                 <h2>
                     Overlay card with Title
                 </h2>
